// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`constant-value-int.twig - twig-verify > constant-value-int.twig 1`] = `
    123
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
123

`;

exports[`constant-value-string.twig - twig-verify > constant-value-string.twig 1`] = `
  Test string
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Test string

`;

exports[`special-cases.twig - twig-verify > special-cases.twig 1`] = `
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
<li><span><!--//--></span>No results found</li>
{% endif %}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{% if isRTL %}&#8206;{% endif %}

{% if searchResultFailing %}
    <li><span><!-- // --></span>No results found</li>
{% endif %}

`;
